fixed homepage alignment issues

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -94,8 +94,9 @@
 }
 
 .box1_5-textRight {
+    height: 15em;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     text-align: left;
     margin: 10%;
@@ -205,8 +206,11 @@
     }
 
     .box2-encloser {
-        overflow: auto;
+        overflow: hidden;
         max-height: fit-content;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     #informationText {
